# AIML-Tutorial

./: .gitignore  README.md  environment.yml
Lecture1_ANNintro/: ANN_intro.ipynb
Lecture1_ANNintro/.ipynb_checkpoints/: ANN_intro-checkpoint.ipynb  XANN_PredictENSO-tf-checkpoint.ipynb  XANN_intro-pytorch-checkpoint.ipynb  XANN_intro-tf-checkpoint.ipynb
Lecture2_ANNvsCNN/: ANN_PredictENSO.ipynb  CNN_PredictENSO.ipynb
Lecture2_ANNvsCNN/.ipynb_checkpoints/: ANN_PredictENSO-checkpoint.ipynb  CNN_PredictENSO-checkpoint.ipynb
Lecture3_XAI/: PredictENSO_ItG.ipynb  XPredictENSO_BO.ipynb
Lecture3_XAI/.ipynb_checkpoints/: PredictENSO_ItG-checkpoint.ipynb
Lecture4_AI4NWP/: AI4NWP_MLBootcamp.ipynb  AI4NWP_MLBootcamp.slides.html  pyproject.toml
Lecture5_Trees/: Decision_Trees_ENSO.ipynb  sars_hail.txt
utils/: ENSO_utils.py  keras-tutorial.yml  utils.py
utils/.ipynb_checkpoints/: ENSO_utils-checkpoint.py
